#1755: fixed navigation overlap (#1763)

--- a/components/vf-navigation/vf-navigation.scss
+++ b/components/vf-navigation/vf-navigation.scss
@@ -58,7 +58,7 @@
   position: sticky;
   top: 0;
   background: white;
-  z-index: 1001;
+  z-index: 1986;
 
   .vf-navigation__link {
     &:focus,
